# Vango5

./: .gitignore  sdkconfig  sdkconfig.defaults  sdkconfig.old  ui_events.txt
Documents/: AutoDeleteCopy.py
Documents/SquareLine_Project/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
Documents/SquareLine_Project/UI_Files/: CMakeLists.txt  filelist.txt  ui.c  ui_events.c  ui_img_arc1_png.c  ui_img_arcdesign_png.c  ui_img_btnsettings2_png.c  ui_img_button_down_png.c  ui_img_button_up_png.c  ui_img_calibration_png.c  ui_img_outcontrols2_png.c  ui_img_settingsicon_png.c  ui_img_theme_png.c  ui_scrDimsandSensorsandWaters.c  ui_scrMain.c  ui_scrPages.c  ui_scrPanelSettings.c  ui_scrRGB.c  ui_scrSettings.c  ui_scrWallpaper.c
components/hexnet/: CMakeLists.txt
components/hexnet/inc/: hexnet_bluetooth.h  hexnet_canbus.h
components/hexnet/src/: hexnet_bluetooth.c  hexnet_canbus.c
components/ui_files/: ui.c  ui.h  ui_events.h  ui_img_1096609443.c  ui_img_arcdesign2_png.c  ui_img_connectioncontrol_png.c  ui_img_outcontrols_png.c  ui_img_rgbcontrol_png.c  ui_img_sensors_png.c  ui_img_slideractivee_png.c  ui_img_sliderpassive_png.c  ui_img_tempicon_png.c  ui_img_waterlevel_png.c  ui_scrCalibration.c  ui_scrDimsandSensorsandWaters.c  ui_scrInit.c  ui_scrMain.c  ui_scrPanelSettings.c  ui_scrRGB.c  ui_scrSettings.c  ui_scrTheme.c
main/: CMakeLists.txt  display_manager.c  display_manager.h  displayl.h  main.c  settings_page.c  settings_page.h
